syntax = "proto3";

option go_package = "pb/api";

import "api/app.proto";
import "api/message.proto";

// PING
message PingRequest {}

message PingResponse {}

// REGISTER

message RegisterRequest {
  string username = 1;
  string password = 2;
}

message RegisterResponse {
  Status status = 1;
}

// LOGIN

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  Status status = 1;
  JWTAccess jwt_access = 2;
}

// REVOKE

message RevokeRequest {
  string access_token = 1;
}

message RevokeResponse {
  Status status = 1;
}

// REFRESH

message RefreshRequest {
  string refresh_token = 1;
}

message RefreshResponse {
  Status status = 1;
  JWTAccess jwt_access = 2;
}

// VERIFY

message VerifyRequest {
  string access_token = 1;
}

message VerifyResponse {
  Status status = 1;
  User user = 2;
}

// LIST

message ListRequest {
  int32 offset = 1;
  int32 limit = 2;
  string order_by = 3;
}

message ListResponse {
  Status status = 1;
  repeated User users = 2;
}